# hackathon_versailles

./: .gitignore  RAGagent.py  README.md  app_stream.py  groups.json  hierarchy.json  main.py  main_api.py  main_workflow.py  planner_agent.py  pyproject.toml  site_hierarchy.json  site_hierarchy.py  step_1.py  streamlit_app.py  test_api.py
RAG agent/: RAGagent.py
RAG_agent/: RAGagent.py  hierarchy.json
app/: app.py  voice_agent.py
app/recordings/: recording_20250930_122531_orig
checkpoints/faiss_index/: index.faiss  index.pkl
