[project]
name = "hackathon-versailles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2.12",
    "langgraph>=0.6.7",
    "mistralai>=1.9.10",
    "pydub>=0.25.1",
    "pyppeteer>=2.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
    "tavily-python>=0.7.12",
]
